\name{NEWS}
\title{NEWS file for the grImport2 package}
\encoding{UTF-8}

\section{Changes in version 0.1-6}{
  \itemize{
    \item fix for importing SVG containing \code{<use>} elements that
    refer to complex content (including nested \code{<use>} elements,
    \code{<use>} use elements with \code{transform} attributes,
    \code{<use>} elements with \code{mask} attributes, and \code{use}
    content with \code{clip-path} attributes.
    
    \item fix for feColorMatrix filter (matrix value was being
    transposed).
    
    \item fix for \code{ext="gridSVG"} when exporting definitions
    (like masks) that contain references to other definitions
    (like filters).
  }
}
\section{Changes in version 0.1-5}{
  \itemize{
    \item Added \code{clip} argument to \code{grid.picture()} so that
    we can inherit clipping region when drawing an imported image
    (default remains that the picture sets its own clipping viewport).
    Thanks to Silas Dean.
  }
}
\section{Changes in version 0.1-4}{
  \itemize{
    \item Fix for importing radial gradient with gradientTransform
    (radius of gradient was not being transformed correctly).
  }
}
\section{Changes in version 0.1-3}{
  \itemize{
    \item Fix for \code{makeContent()} methods for picRect, picPath,
    and picPolyline, so that the forced grob has the same name
    as the original grob.

    \item Fix for parsing \code{<symbol>} element with no children or
    with empty image.

    \item Fix for import of \code{lwd} from SVG \code{line-width}

    \item Relax import requirement that SVG file be generated by
    \pkg{grConvert};  now accept SVG file that is generated by
    \pkg{grConvert} OR SVG file that can be identified as being
    generated by Cairo graphics.  This allows us to accept, for example,
    files generated by \code{rsvg_svg()} from the \pkg{rsvg} package.
  }
}
\section{Changes in version 0.1-2}{
  \itemize{
    \item Fix for importing rotated rectangles.
